--- a/Interfaces/reloj/reloj.css/reloj.css
+++ b/Interfaces/reloj/reloj.css/reloj.css
@@ -1,13 +1,54 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 *
 {
-    --bg: #e5e5e5;
-    --shadowLg: #fff;
-    --shadow: rgba(13,39,80,.26);
+    --bg: #ffffff;
+    --shadowLg: rgb(14, 14, 14);
+    --shadow: rgba(0, 0, 0, 0.26);
 }
 body{
     min-height: 100vh;
-    background: var(--bg);
+   /* background: var(--bg);*/
+    background:url(../img/xic.jpg);
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
     overflow: hidden;
+}
+.cod-empleado{
+    justify-content: center;
+    text-align: center;
+}
+label{
+    align-content: flex-start;
+    font-family:'Open-Sans', sans-serif;
+    font-size: 16px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-weight: bold;
+    /*display: block;*/
+    margin: 200 0px;
+}
+input[type=text]{
+    font-family: 'Open-Sans', sans-serif;
+    width: 60%;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    margin: 10px 0;
+    outline: none;
+    padding: 12px;
+    transition: .1s;
+    text-align: center;
+}
+
+input[type=text]:focus {
+    border-color: crimson;
+    box-shadow: 0 0 8px 0 crimson;
 }
 body , span:nth-child(1)
 {
@@ -31,27 +72,34 @@ span:nth-child(1){
     15px 15px 15px var(--shadow),
     inset -15px -15px 15px var(--shadowLg),
     inset 15px 15px 15px var(--shadow);
-    color: #444444;
-    border: 5px solid transparent;
+    color: #ffffff;
+    border: 5px solid #990066 ;
 }
 span:nth-child(2)
 {
     line-height: 70px;
     font-size: 26px;
-    color: #5d5d5d;
+    color: #ffffff;
 }
 
-input[type=text]{
-    width: 100%;
-    border: 2px solid #aaa;
-    border-radius: 10px;
-    margin: 10px 0;
-    outline: none;
-    padding: 8px;
-    transition: .1s;
+.accion input{
+    width: 75%;
+    margin-bottom: 20px;
 }
 
-input[type=text]:focus {
-    border-color: crimson;
-    box-shadow: 0 0 8px 0 crimson;
+.accion input[type="submit"] {
+  align-content: flex-end;
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #990066;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 20px;
 }
+.accion input[type="submit"]:hover {
+  cursor: pointer;
+  background: white;
+  color: #000;
+}
+
