--- a/Interfaces/primera/indexcss/estiloindex.css
+++ b/Interfaces/primera/indexcss/estiloindex.css
@@ -1,35 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url(menu.css);
 
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-header {
-    width: 100%;
-    background: #990066;
-    color: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-}
-
-.contenedor
-{
-    width: 100%;
-    margin: auto;
-    
-}
-
-h1 {
-    float: left;
-}
-
-header .contenedor {
-    display: table;
 }
 
 body {
@@ -46,27 +19,26 @@ body {
         -webkit-background-size: cover;
         -o-background-size: cover;
 }
-.menu-elegir{
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-}
-/*.button-regis*/ .regi{
-    width: 250px;
-    height: 250px;
-    margin: 190px 0;
+
+.button-regis .regi{
+    width: 200px;
+    height: 200px;
+    top: -50px;
+    left: calc(50% - 50px);
 }
 
-/*.button-emp*/ .emp{
-    width: 240px;
-    height: 250px;
-    border-radius: 22%;
-    margin: 190px 0;
+.button-emp .emp{
+    width: 190px;
+    height: 200px;
+    border-radius: 25%;
+    top: -70px;
+    left: calc(50% - 70px);
 }
-/*.button-admin*/ .admi{
-    width: 245px;
-    height: 245px;
+.button-admin .admi{
+    width: 195px;
+    height: 195px;
     border-radius: 30%;
-    margin: 190px 0;
+    top: -50px;
+    left: calc(50% - 50px);
 }
 
